20181204 Updates